@@ -2,6 +2,8 @@
 
 	* src/z80/gen.c:
 	  Fix an issue in handling surviving a when assigning single bytes from (hl) to stack.
+	* support/regression/tests/bug-3166.c:
+	  Test for bug #3166.
 
 2021-01-03 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
